--- a/src/index.html
+++ b/src/index.html
@@ -83,8 +83,39 @@
 
 <body>
   <div id="screens" class="screens non-scroll">
+
+    <header class="screen screen-header">
+      <div class="container">
+        <div class="header-flex">
+          <div class="header-logo">
+            <a href="#">
+              <img src="./images/logo-main.png" alt="logo">
+            </a>
+          </div>
+          <nav class="header-nav">
+            <button class="burger-btn">
+              <span></span>
+              <span></span>
+              <span></span>
+            </button>
+            <ul>
+              <li>
+                <a href="#">Главная</a>
+              </li>
+              <li>
+                <a href="#" class="active">Конкурс</a>
+              </li>
+              <li>
+                <a href="#">О бренде</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+
     <!-- main screen start -->
-    <div class="screen screen-promo">
+    <!-- <div class="screen screen-promo">
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-sm-4 col-xs-4">
@@ -131,8 +162,187 @@
 
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
       <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
+    </div> -->
+
+
+    <div class="screen screen-promo">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-5 col-sm-5 col-xs-12">
+            <div class="screen-promo-left">
+              <div class="promo-text">
+                <div class="h1 promo-text-title">
+                  Исследуй новое - создавай свое идеальное лето!
+                </div>
+                <p class="promo-text-question">
+                  Готов наполнить своё лето новыми впечатлениями и незабываемыми открытиями?
+                </p>
+              </div>
+              <!-- <div class="screen-promo-slogan">
+                <img src="./images/slogan@2x.png" srcset="./images/slogan@2x.png 2x" alt="slogan">
+              </div> -->
+              <button class="screen-promo-btn ui-btn benefits">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M19.5 12L12 19.5L4.5 12" stroke="#23372B" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path d="M19.5 4.5L12 12L4.5 4.5" stroke="#23372B" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </svg>
+                Вперед!
+              </button>
+            </div>
+          </div>
+          <!-- <div class="col-md-6 col-sm-6 col-xs-6">
+            <div class="screen-promo-bottle">
+              <div class="screen-promo-imgs">
+                <img src="./images/bottle.png" srcset="./images/bottle@2x.png" alt="bottle">
+              </div>
+              <button class="screen-promo-btn ui-btn benefits">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M19.5 12L12 19.5L4.5 12" stroke="#23372B" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path d="M19.5 4.5L12 12L4.5 4.5" stroke="#23372B" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </svg>
+                Вперед!
+              </button>
+            </div>
+          </div> -->
+          <!-- <div class="col-md-2 col-sm-2 col-xs-2">
+            <div class="screen-promo-slogan">
+              <img src="./images/slogan.png" alt="slogan">
+            </div>
+            <div class="screen-promo-ticket">
+              <img src="./images/gold.png" alt="ticket" class="ticket">
+            </div>
+          </div> -->
+        </div>
+      </div>
+
+      <div class="bottle-wrapper">
+        <div class="row">
+          <div class="col-md-10 col-sm-10 col-xs-10">
+            <img src="./images/bottle.png" srcset="./images/bottle@2x.png" alt="bottle">
+          </div>
+        </div>
+      </div>
+
+
+      <img src="./images/slogan.png" alt="slogan" class="screen-slogan">
+      <img src="./images/gold.png" alt="ticket" class="screen-ticket">
+
+
+      <img src="./images/top-screen-bg.jpg" class="screen-promo-bg" alt="bg">
+
+      <img src="./images/alert.svg" alt="alert" class="screen-alert">
+      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
     </div>
+
+
+
+
     <!-- main screen end -->
+
+    <!-- contest screen start -->
+
+    <div class="screen screen-about-contest">
+      <div class="container">
+        <div class="contest-content">
+          <div class="h2 screen-about-contest__title">
+            ИССЛЕДУЙ ЛЕТО ВМЕСТЕ
+            С “БЕЛЫМ МЕДВЕДЕМ”
+          </div>
+          <div class="screen-about-contest__period">
+            С 1 июля по 30 сентября
+          </div>
+          <div class="screen-about-contest__text">
+            <p>
+              Каждые 2 недели мы будем выбирать три самых
+              интересных и амбициозных плана на лето.
+            </p>
+            <p>
+              Из авторы получат ценные призы, которые сделают
+              исследование лета еще более захватывающим!
+            </p>
+          </div>
+        </div>
+        <div class="screen-about-contest__cards">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card-item">
+                <div class="card-item-title">
+                  6 розыгрышей
+                </div>
+                <p class="card-item-text">
+                  3 победителя каждые 2 недели
+                </p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card-item">
+                <div class="card-item-title">
+                  18 уникальных призов
+                </div>
+                <div class="card-item-images">
+                  <div class="card-item-images__image">
+                    <img src="./images/present-1.png" alt="present">
+                  </div>
+                  <div class="card-item-images__image">
+                    <img src="./images/present-2.png" alt="present">
+                  </div>
+                  <div class="card-item-images__image">
+                    <img src="./images/present-3.png" alt="present">
+                  </div>
+                  <div class="card-item-images__image mfp-link" data-href="./popups/popup-presents.html">
+                    <span>+15</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card-item">
+                <div class="card-item-title">
+                  Шанс есть у каждого
+                </div>
+                <p class="card-item-text">
+                  Призы получат самые креативные и амбициозные исследователи!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="contest-steps">
+          <img src="./images/steps-all-2.svg" alt="steps">
+          <button class="ui-btn ui-btn-colored">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+              <path d="M12.1499 16.5V18.6" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round" />
+              <path
+                d="M7.1499 22H17.1499V21C17.1499 19.9 16.2499 19 15.1499 19H9.1499C8.0499 19 7.1499 19.9 7.1499 21V22V22Z"
+                stroke="white" stroke-width="1.5" stroke-miterlimit="10" />
+              <path d="M6.1499 22H18.1499" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round" />
+              <path
+                d="M12 16C8.13 16 5 12.87 5 9V6C5 3.79 6.79 2 9 2H15C17.21 2 19 3.79 19 6V9C19 12.87 15.87 16 12 16Z"
+                stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+              <path
+                d="M5.47004 11.65C4.72004 11.41 4.06004 10.97 3.54004 10.45C2.64004 9.44998 2.04004 8.24998 2.04004 6.84998C2.04004 5.44998 3.14004 4.34998 4.54004 4.34998H5.19004C4.99004 4.80998 4.89004 5.31998 4.89004 5.84998V8.84998C4.89004 9.84998 5.10004 10.79 5.47004 11.65Z"
+                stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+              <path
+                d="M18.53 11.65C19.28 11.41 19.94 10.97 20.46 10.45C21.36 9.44998 21.96 8.24998 21.96 6.84998C21.96 5.44998 20.86 4.34998 19.46 4.34998H18.81C19.01 4.80998 19.11 5.31998 19.11 5.84998V8.84998C19.11 9.84998 18.9 10.79 18.53 11.65Z"
+                stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            Принять участие
+          </button>
+        </div>
+      </div>
+      <img src="./images/gold.png" alt="ticket" class="ticket">
+      <img src="./images/alert.svg" alt="alert" class="screen-alert">
+      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
+    </div>
+
+    <!-- contest screen end -->
 
 
     <!-- second screen start -->
