--- a/public/contest.html
+++ b/public/contest.html
@@ -346,10 +346,10 @@
 
             <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-6">
               <div class="screen-plans-item">
-                <div class="screen-plans-item__likes">
-                  <p>24</p>
+                <a class="screen-plans-item__likes" href="javascript:void(0)">
+                  <span>24</span>
                   <img src="./images/lapa.svg" alt="lag">
-                </div>
+                </a>
                 <div class="screen-plans-item__head">
                   <div class="screen-plans-item__image">
                     <img src="./images/avatar.png" alt="avatar">
@@ -376,10 +376,10 @@
 
             <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-6">
               <div class="screen-plans-item">
-                <div class="screen-plans-item__likes">
-                  <p>21</p>
+                <a class="screen-plans-item__likes" href="javascript:void(0)">
+                  <span>21</span>
                   <img src="./images/lapa.svg" alt="lag">
-                </div>
+                </a>
                 <div class="screen-plans-item__head">
                   <div class="screen-plans-item__image">
                     <img src="./images/avatar.png" alt="avatar">
@@ -404,10 +404,10 @@
 
             <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-6">
               <div class="screen-plans-item">
-                <div class="screen-plans-item__likes">
-                  <p>34</p>
+                <a class="screen-plans-item__likes" href="javascript:void(0)">
+                  <span>34</span>
                   <img src="./images/lapa.svg" alt="lag">
-                </div>
+                </a>
                 <div class="screen-plans-item__head">
                   <div class="screen-plans-item__image">
                     <img src="./images/avatar.png" alt="avatar">
@@ -432,10 +432,10 @@
 
             <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-6">
               <div class="screen-plans-item">
-                <div class="screen-plans-item__likes">
-                  <p>412</p>
+                <a class="screen-plans-item__likes" href="javascript:void(0)">
+                  <span>412</span>
                   <img src="./images/lapa.svg" alt="lag">
-                </div>
+                </a>
                 <div class="screen-plans-item__head">
                   <div class="screen-plans-item__image">
                     <img src="./images/avatar.png" alt="avatar">
@@ -460,10 +460,10 @@
 
             <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-6">
               <div class="screen-plans-item">
-                <div class="screen-plans-item__likes">
-                  <p>24</p>
+                <a class="screen-plans-item__likes" href="javascript:void(0)">
+                  <span>24</span>
                   <img src="./images/lapa.svg" alt="lag">
-                </div>
+                </a>
                 <div class="screen-plans-item__head">
                   <div class="screen-plans-item__image">
                     <img src="./images/avatar.png" alt="avatar">
@@ -488,10 +488,10 @@
 
             <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-6">
               <div class="screen-plans-item">
-                <div class="screen-plans-item__likes">
-                  <p>21</p>
+                <a class="screen-plans-item__likes" href="javascript:void(0)">
+                  <span>21</span>
                   <img src="./images/lapa.svg" alt="lag">
-                </div>
+                </a>
                 <div class="screen-plans-item__head">
                   <div class="screen-plans-item__image">
                     <img src="./images/avatar.png" alt="avatar">
@@ -516,10 +516,10 @@
 
             <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-6">
               <div class="screen-plans-item">
-                <div class="screen-plans-item__likes">
-                  <p>34</p>
+                <a class="screen-plans-item__likes" href="javascript:void(0)">
+                  <span>34</span>
                   <img src="./images/lapa.svg" alt="lag">
-                </div>
+                </a>
                 <div class="screen-plans-item__head">
                   <div class="screen-plans-item__image">
                     <img src="./images/avatar.png" alt="avatar">
@@ -544,10 +544,10 @@
 
             <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-6">
               <div class="screen-plans-item">
-                <div class="screen-plans-item__likes">
-                  <p>412</p>
+                <a class="screen-plans-item__likes" href="javascript:void(0)">
+                  <span>412</span>
                   <img src="./images/lapa.svg" alt="lag">
-                </div>
+                </a>
                 <div class="screen-plans-item__head">
                   <div class="screen-plans-item__image">
                     <img src="./images/avatar.png" alt="avatar">
